--- a/templates/page_blocks/content.html
+++ b/templates/page_blocks/content.html
@@ -1,47 +1,122 @@
-<div class="mt-4 p-5 content">
-    <div class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center">
-        <div class="content_block-text">
-            <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi officia voluptate nulla dicta sint
-                corporis animi dolorum? Deserunt modi repudiandae, accusamus repellendus, illo, eaque facere accusantium
-                blanditiis nemo at tempore!
-            </p>
-        </div>
-        <div class="content_block-image">
-            <!-- column_type_1.svg -->
-        </div>
+<main class="mt-4 p-5 content">
+    <div
+      class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center"
+    >
+      <div class="content_block-text text-1">
+        <h3>Lorem ipsum dolor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi officia voluptate nulla dicta
+          sint corporis animi dolorum? Deserunt modi repudiandae, accusamus repellendus, illo, eaque
+          facere accusantium blanditiis nemo at tempore!
+        </p>
+      </div>
+      <div class="content_block-image image-1">
+          <svg   id="Column Chart 1"   width="100%"   height="100%"   viewBox="0 0 1000 500"   xmlns="http://www.w3.org/2000/svg" >     		     <path d="  M0,500  h66.66666666666667  v-374.2377068057993  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M83.33333333333333,500  h66.66666666666667  v-124.18341929261709  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M166.66666666666666,500  h66.66666666666667  v-241.30390507824495  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M250,500  h66.66666666666667  v-169.6240505642986  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M333.3333333333333,500  h66.66666666666667  v-306.373445924344  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M416.66666666666663,500  h66.66666666666667  v-260.4619243164975  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M500,500  h66.66666666666667  v-242.7504004591985  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M583.3333333333333,500  h66.66666666666667  v-241.83988197433592  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M666.6666666666666,500  h66.66666666666667  v-95.16828108868503  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M750,500  h66.66666666666667  v-294.9556406646727  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M833.3333333333333,500  h66.66666666666667  v-248.3089225695051  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M916.6666666666666,500  h66.66666666666667  v-280.4783641432936  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> </svg>
+        <!-- column_type_1.svg -->
+      </div>
     </div>
-    <div class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center">
-        <div class="content_block-text">
-            <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos sunt iure assumenda reprehenderit et?
-                Eaque ex accusantium nisi nulla aut animi harum ad deleniti, possimus numquam laborum, corporis
-                consectetur.</p>
-        </div>
-        <div class="content_block-image">
-            <!-- column_type_2.svg -->
-        </div>
+    <div
+      class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center"
+    >
+      <div class="content_block-text text-2">
+        <h3>Lorem ipsum dolor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos sunt iure assumenda
+          reprehenderit et? Eaque ex accusantium nisi nulla aut animi harum ad deleniti, possimus
+          numquam laborum, corporis consectetur.
+        </p>
+      </div>
+      <div class="content_block-image image-2">
+        <svg
+          id="Column Chart 2"
+          width="100%"
+          height="100%"
+          viewBox="0 0 1000 500"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="  M0,500  h66.66666666666667  v-301.37636488914677  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M83.33333333333333,500  h66.66666666666667  v-192.59522890073538  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M166.66666666666666,500  h66.66666666666667  v-189.22453492549585  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M250,500  h66.66666666666667  v-290.08247501316043  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M333.3333333333333,500  h66.66666666666667  v-399.41027490917736  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M416.66666666666663,500  h66.66666666666667  v-352.6216317157781  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M500,500  h66.66666666666667  v-178.13352150380013  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M583.3333333333333,500  h66.66666666666667  v-357.5871817402723  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M666.6666666666666,500  h66.66666666666667  v-177.73432952044004  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M750,500  h66.66666666666667  v-203.49535140823332  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M833.3333333333333,500  h66.66666666666667  v-111.67157932565794  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+          <path
+            d="  M916.6666666666666,500  h66.66666666666667  v-104.25353250893  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z"
+            fill="#8184c2"
+          />
+        </svg>
+        <!-- column_type_2.svg -->
+      </div>
     </div>
-    <div class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center">
-        <div class="content_block-text">
-            <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos sunt iure assumenda reprehenderit et?
-                Eaque ex accusantium nisi nulla aut animi harum ad deleniti, possimus numquam laborum, corporis
-                consectetur.</p>
-        </div>
-        <div class="content_block-image">
-            <!-- column_type_3.svg -->
-        </div>
+    <div
+      class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center"
+    >
+      <div class="content_block-text text-3">
+        <h3>Lorem ipsum dolor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos sunt iure assumenda
+          reprehenderit et? Eaque ex accusantium nisi nulla aut animi harum ad deleniti, possimus
+          numquam laborum, corporis consectetur.
+        </p>
+      </div>
+      <div class="content_block-image image-3">
+          <svg   id="Column Chart 3"   width="100%"   height="100%"   viewBox="0 0 1000 500"   xmlns="http://www.w3.org/2000/svg" >     		     <path d="  M0,500  h66.66666666666667  v-95.44121017804082  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M83.33333333333333,500  h66.66666666666667  v-368.67933358608377  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M166.66666666666666,500  h66.66666666666667  v-142.84789869533734  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M250,500  h66.66666666666667  v-217.3013152562354  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M333.3333333333333,500  h66.66666666666667  v-90.87417688762923  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M416.66666666666663,500  h66.66666666666667  v-296.474727765596  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M500,500  h66.66666666666667  v-139.0299956783059  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M583.3333333333333,500  h66.66666666666667  v-244.70194224760297  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M666.6666666666666,500  h66.66666666666667  v-317.3259423207491  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M750,500  h66.66666666666667  v-354.2890346438924  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M833.3333333333333,500  h66.66666666666667  v-390.21731923238644  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M916.6666666666666,500  h66.66666666666667  v-329.6442990881289  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> </svg>
+        <!-- column_type_3.svg -->
+      </div>
     </div>
-    <div class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center">
-        <div class="content_block-text">
-            <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos sunt iure assumenda reprehenderit et?
-                Eaque ex accusantium nisi nulla aut animi harum ad deleniti, possimus numquam laborum, corporis
-                consectetur.</p>
-        </div>
-        <div class="content_block-image">
-            <!-- column_type_4.svg -->
-        </div>
+    <div
+      class="content_block d-flex flex-column flex-lg-row justify-content-between align-items-center"
+    >
+      <div class="content_block-text text-4">
+        <h3>Lorem ipsum dolor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos sunt iure assumenda
+          reprehenderit et? Eaque ex accusantium nisi nulla aut animi harum ad deleniti, possimus
+          numquam laborum, corporis consectetur.
+        </p>
+      </div>
+      <div class="content_block-image image-4">
+          <svg   id="Column Chart 4"   width="100%"   height="100%"   viewBox="0 0 1000 500"   xmlns="http://www.w3.org/2000/svg" >     		     <path d="  M0,500  h66.66666666666667  v-143.24840866021646  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M83.33333333333333,500  h66.66666666666667  v-422.56418706598765  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M166.66666666666666,500  h66.66666666666667  v-361.75261458275446  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M250,500  h66.66666666666667  v-316.61320923861354  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M333.3333333333333,500  h66.66666666666667  v-288.69081545125977  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M416.66666666666663,500  h66.66666666666667  v-387.40397474664036  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M500,500  h66.66666666666667  v-247.39397678839447  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M583.3333333333333,500  h66.66666666666667  v-293.5547052516365  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M666.6666666666666,500  h66.66666666666667  v-242.6639184671244  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M750,500  h66.66666666666667  v-423.2160108414106  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M833.3333333333333,500  h66.66666666666667  v-201.8871284702284  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> <path d="  M916.6666666666666,500  h66.66666666666667  v-407.44717671913304  q0,-20 -20,-20  h-26.66666666666667  q-20,0 -20,20  Z" fill="#8184c2" /> </svg>
+        <!-- column_type_4.svg -->
+      </div>
     </div>
-</div>
+  </main>
+  
