--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-<section class="m-4">
+<div class="m-4">
   <header class="mt-4 p-5 bg-secondary text-white rounded">
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">This is a my super blog about something.</p>
@@ -27,5 +27,5 @@
 
     {% endfor %}
   </main>
-</section>
+</div>
 {% endblock content %}
