--- a/templates/article.html
+++ b/templates/article.html
@@ -6,34 +6,39 @@
 
 
 {% block content %}
-<div class="p-4">
+<article class="p-4">
   <input type="hidden" id="post-id" value="{{ object.id }}" />
-  <div>
-    <div class="blog-post p-5">
-      <h1>{{ object.title }}</h1>
-      <hr />
-      <p class="blog-post-meta text-secondary">{{ post.created|date:"d.m.Y" }} by {{ post.author }}</p>
-      <p>{{ object.body|safe }}</p>
+  
+    <main class="blog-post p-5">
+      <header>
+        <h1>{{ object.title }}</h1>
+        <hr />
+        <p class="blog-post-meta text-secondary">{{ post.created|date:"d.m.Y" }} by {{ post.author }}</p>
+      </header>
+        {{ object.body|safe }}
       {% like_btn %}
-    </div>
-  </div>
+    </main>
+
   {% include 'components/comments.html' %}
-  <div class="row">
-    {% for post in last_articles %}
-    <div class="post-item col-12 col-md-6 p-2">
-      <div class="card h-100">
-        <div class="card-body">
-          <h2 class="card-title">{{ post.title }}</h2>
-          <p class="text-secondary">{{ post.created|date:"d.m.Y" }} by {{ post.author }}</p>
-          <p class="card-text">{{post.body|safe|truncatewords_html:15 }}</p>
-          {% like_btn %}
-          <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More</a>
+
+  <section>
+    <h2>Last articles</h2>
+    <div class="row">
+      {% for post in last_articles %}
+      <article class="post-item col-12 col-md-6 p-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">{{ post.title }}</h2>
+            <p class="text-secondary">{{ post.created|date:"d.m.Y" }} by {{ post.author }}</p>
+            <p class="card-text">{{post.body|safe|truncatewords_html:15 }}</p>
+            {% like_btn %}
+            <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More</a>
+          </div>
         </div>
-      </div>
+      </article>
+      {% endfor %}
     </div>
-    {% endfor %}
-  </div>>
-</div>
+  </section>
   <!-- render last_articles here -->
 
 </div>
